--- a/public/login.html
+++ b/public/login.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>登录</title>
+		<link rel="stylesheet" href="../css/public.css" />
+		<link rel="stylesheet" href="../css/login.css" />
 	</head>
 	<body>
 		<!-------------------login-------------------------->
@@ -13,8 +15,8 @@
 				</h1>
 				<p></p>
 				<div class="msg-warn hide"><b></b>公共场所不建议自动登录，以防账号丢失</div>
-				<p><input type="text" name="" value="" placeholder="昵称/邮箱/手机号" /></p>
-				<p><input type="text" name="" value="" placeholder="密码" /></p>
+				<p><input type="text1" name="" value="" placeholder="昵称/邮箱/手机号" /></p>
+				<p><input type="text1" name="" value="" placeholder="密码" /></p>
 				<p><input type="submit" name="" value="登  录" /></p>
 				<p class="txt"><a class="" href="reg.html">免费注册</a><a href="forget.html">忘记密码？</a></p>
 			</form>
